fix button visibility, fix layout

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -88,7 +88,7 @@
   .home .edit-button,
   .home .archive-button {
     visibility: hidden;
-    visibility: unset;
+
   }
   .home.edit-mode .edit-button,
   .home.edit-mode .archive-button {
